fix overflow scroll functionaltiy

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,2 +1,8 @@
 .buttonRow {
+  overflow: auto;
+  white-space: nowrap;
+  margin-left: -21px;
+  margin-right: -21px;
+  margin-bottom: -21px;
+  padding: 21px;
 }
